# TRUST4

./: Annotator.cpp  Annotator.hpp  BamExtractor.cpp  BamExtractor.hpp  CMakeLists.txt  FastqExtractor.cpp  FastqExtractor.hpp  trust4_main.cpp  trust4_main.hpp
